--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,22 @@
 blinker==1.4
+certifi==2018.4.16
+chardet==3.0.4
 click==6.7
+coverage==4.5.1
 Flask==0.12.2
 Flask-DebugToolbar==0.10.1
 Flask-SQLAlchemy==2.3.2
+Flask-Turbolinks==0.2.0
+idna==2.6
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
+passlib==1.7.1
 pkg-resources==0.0.0
 psycopg2==2.7.4
 psycopg2-binary==2.7.4
+pytz==2018.4
+requests==2.18.4
 SQLAlchemy==1.2.6
+urllib3==1.22
 Werkzeug==0.14.1
